<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="isl.wumpus.EscogerLaberinto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivPoliedro"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        app:srcCompat="@drawable/tetraedro" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnRegular"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="Regular"
            android:tag="#42A5F5"
            android:background="#42A5F5"/>

        <Button
            android:id="@+id/btnIrregular"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="Irregular"
            android:tag="#42A5F5"
            android:background="#42A5F5"/>

        <Button
            android:id="@+id/btnDibujar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="Dibujar"
            android:tag="#42A5F5"
            android:background="#42A5F5"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/btnEmplazar"
            android:tag="#42A5F5"
            android:background="#42A5F5"
            android:text="Emplazar" />


    </LinearLayout>

</LinearLayout>
