...
    >

    <TextView
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSolo"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:ems="10"
...
        android:textSize="40dp" />

    <Button
        android:id="@+id/btnSolo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnMulti"
        android:layout_alignLeft="@+id/btnMulti"
        android:layout_alignStart="@+id/btnMulti"
        android:layout_marginBottom="36dp"
        android:onClick="showmsg"
        android:layout_gravity="center_horizontal"
        android:text="INICIAR EL JUEGO" />
...
